# helper

./: .gitignore  CLAUDE.md  DOCUMENT_AUTHORING_IMPLEMENTATION.ts  index.html  package-lock.json  package.json  vite.config.ts
bot/: .env.example  README.md  pyproject.toml
bot/deploy/: README.md  helper.env.template  helper.service  nginx.conf  wave.env.template
bot/helper/: __init__.py  cli.py  server.py
bot/helper/acl/: __init__.py  policy.py  tagger.py
bot/helper/ask/: __init__.py  feedback_signal.py  retrieve.py  runtime.py
bot/helper/batch/: __init__.py  ingest.py
bot/helper/cases/: __init__.py  consumer.py  promoter.py
bot/helper/compiler/: __init__.py  build.py
bot/helper/eval/: __init__.py  (+1 more)
bot/scripts/: backfill_memory_embedding.py  backfill_spec_topic.py  backfill_wave_user_aliases.py  drop_v1_tables.sql  poc_agent_athenai.py  purge_bot_context_pollution.py
bot/tests/: conftest.py  test_acl.py  test_admin_api.py  test_ask_parse_json.py  test_ask_parse_sections.py  test_ask_quoted.py  test_ask_retrieve.py  test_bot_routing.py  test_chat_context.py  test_conflict.py  test_feedback_field_path.py  test_feedback_signal.py  test_fts_search.py  test_inbox.py  test_ingest.py  test_inquiry.py  test_intent_heuristics.py  test_l1_chunking.py  test_l1_parse_salvage.py  test_memory_layer.py  test_persist_bot_reply_ack_filter.py  test_prefilter_question.py  test_progress_card.py  test_prosemirror.py  test_reaction_handler.py  test_retrieve_bot_isolation.py  test_retrieve_tokens.py  test_scheduler.py  test_specgen.py  test_vector_index_truncation.py  test_webhook_allowlist.py
openapi-mcp/: .gitignore  README.md  pyproject.toml  requirements.txt
openapi-mcp/tools/: __init__.py  km_doc.md  km_utils.py  server.py  wave_client.py
(+132 files in other folders)
