[project]
name = "helper-bot"
version = "0.0.1"
description = "Helper — 专家决策规约工厂"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    "openai>=1.50",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "click>=8.1",
    "python-frontmatter>=1.1",
    "GitPython>=3.1",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "apscheduler>=3.10",
    "sqlite-vec>=0.1.6",
    "jieba>=0.42",
]

[tool.setuptools.package-data]
"helper.policy.defaults" = ["*.yaml"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pyright>=1.1",
]

[project.scripts]
helper = "helper.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["helper*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"
